--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [ "master","test" ]
+    branches: [ "master"]
   pull_request:
-    branches: [ "master", "test" ]
+    branches: [ "master"]
 
 jobs:
 
